# projects

C++_algorithms/: README.markdown  bst.cpp  ll.cpp
C_algorithms/: README.markdown  bst.c  linked_list.c  merge_sort.c
assembly/: README.markdown  server.s
blood pressure transcription from monitor/: README.md  out.txt  transcribe_digits.py
blood pressure transcription from monitor/helper_files/: get_extended_image_features.py  helper_functions.py
blood pressure transcription from monitor/my_models/: find_color_manual.py  find_color_regression_model.sav
emp/: README.markdown  array_edited.h  array_edited.hpp  set_intersection.cc  testing_arr.cc
emp/emp-examples/: CMakeLists.txt  README.markdown
emp/emp-examples/src/: circuitfile.cc  gcd.cc  millionaire.cc  set_intersection.cc
